--- a/exam/functions.ipynb
+++ b/exam/functions.ipynb
@@ -192,7 +192,7 @@
     "    report.loc['Skewness'] = df.skew()\n",
     "    report.loc['Excess Kurtosis'] = df.kurtosis()\n",
     "    report.loc['VaR'] = df.quantile(q)\n",
-    "    report.loc['Expected Shortfall'] = df[df < df.quantile(q)].mean()\n",
+    "    report.loc['Expected Shortfall(CVaR)'] = df[df < df.quantile(q)].mean()\n",
     "    \n",
     "    cum_ret = (1 + df).cumprod()\n",
     "    rolling_max = cum_ret.cummax()\n",
@@ -381,6 +381,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# HW4 \n",
+    "## Return Comparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def p(h, tilde_mu, tilde_sigma):\n",
+    "    x = - np.sqrt(h) * tilde_mu / tilde_sigma\n",
+    "    val = scipy.stats.norm.cdf(x)\n",
+    "    return val[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## One Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def regress(y, X, intercept=True, annual_fac=12):\n",
+    "    if intercept == True:\n",
+    "        X_ = sm.add_constant(X)\n",
+    "        reg = sm.OLS(y, X_).fit()\n",
+    "        reg_df = reg.params.to_frame('Regression Parameters')\n",
+    "        reg_df.loc[r'$R^{2}$'] = reg.rsquared\n",
+    "        reg_df.loc['const'] *= annual_fac\n",
+    "    else:\n",
+    "        reg = sm.OLS(y, X).fit()\n",
+    "        reg_df = reg.params.to_frame('Regression Parameters')\n",
+    "        reg_df.loc[r'$R^{2}$'] = reg.rsquared\n",
+    "\n",
+    "    return reg_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## HW5"
    ]
   },
@@ -419,11 +467,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# HW6"
+   ]
   },
   {
    "cell_type": "code",
@@ -435,7 +483,155 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# HW7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predict_excess[predict_excess >= 0] = 0\n",
+    "predict_excess[predict_excess < 0] = 1\n",
+    "underperform_rate = (predict_excess.sum(\n",
+    "    axis=0)/predict_excess.shape[0]*100).to_frame(\"Underperformed (%)\")\n",
+    "underperform_rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def OOS_r2(df, factors, start):\n",
+    "    y = df['SPY']\n",
+    "    X = sm.add_constant(df[factors])\n",
+    "\n",
+    "    forecast_err, null_err = [], []\n",
+    "\n",
+    "    for i, j in enumerate(df.index):\n",
+    "        if i >= start:\n",
+    "            currX = X.iloc[:i]\n",
+    "            currY = y.iloc[:i]\n",
+    "            reg = sm.OLS(currY, currX, missing='drop').fit()\n",
+    "            null_forecast = currY.mean()\n",
+    "            reg_predict = reg.predict(X.iloc[[i]])\n",
+    "            actual = y.iloc[[i]]\n",
+    "            forecast_err.append(reg_predict - actual)\n",
+    "            null_err.append(null_forecast - actual)\n",
+    "    RSS = (np.array(forecast_err)**2).sum()\n",
+    "    TSS = (np.array(null_err)**2).sum()\n",
+    "    print(RSS)\n",
+    "    print(TSS)\n",
+    "    return 1 - RSS/TSS\n",
+    "\n",
+    "def OOS_strat(df, factors, start, weight):\n",
+    "    returns = []\n",
+    "    y = df['SPY']\n",
+    "    X = sm.add_constant(df[factors])\n",
+    "\n",
+    "    for i, j in enumerate(df.index):\n",
+    "        if i >= start:\n",
+    "            currX = X.iloc[:i]\n",
+    "            currY = y.iloc[:i]\n",
+    "            reg = sm.OLS(currY, currX, missing='drop').fit()\n",
+    "            pred = reg.predict(X.iloc[[i]])\n",
+    "            w = pred * weight\n",
+    "            returns.append((df.iloc[i]['SPY'] * w)[0])\n",
+    "\n",
+    "    df_strat = pd.DataFrame(\n",
+    "        data=returns, index=df.iloc[-(len(returns)):].index, columns=['Strat Returns'])\n",
+    "    return df_strat\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def oos_reg(y, X, start, add_constant=True):\n",
+    "    # need to use python 3.8\n",
+    "    if add_constant:\n",
+    "        X = sm.add_constant(X)\n",
+    "    model = RollingOLS(\n",
+    "        y, X, window=X.shape[0], min_nobs=start-1, expanding=True).fit()\n",
+    "    params = model.params.shift().iloc[start:]\n",
+    "\n",
+    "    rolling_pre = (model.params.shift() * X).sum(axis=1)\n",
+    "    zero_pre = y.expanding(start).mean().shift()\n",
+    "\n",
+    "    predict_all = pd.concat([y, rolling_pre, zero_pre], axis=1).iloc[start:]\n",
+    "    predict_all.columns = [\"Real\", \"Forecast\", \"Zero predict\"]\n",
+    "    predict_err = np.square(\n",
+    "        predict_all[\"Real\"] - predict_all[\"Forecast\"]).sum()\n",
+    "    zero_pre_err = np.square(\n",
+    "        predict_all[\"Real\"] - predict_all[\"Zero predict\"]).sum()\n",
+    "    # print(predict_err, zero_pre_err)\n",
+    "    r_squared = 1 - predict_err/zero_pre_err\n",
+    "    return params, predict_all, r_squared"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in r_df_OOS.columns[:3]:\n",
+    "    df_riskprem2[col] = len(\n",
+    "        r_df_OOS[r_df_OOS[col] < r_df_OOS['rf']])/len(r_df_OOS) * 100\n",
+    "\n",
+    "df_riskprem2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HW8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HW9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate fractions\n",
+    "month_frac = pd.DataFrame(\n",
+    "    data=None, columns=excess_ret_expectation.columns, index=['% of Months'])\n",
+    "\n",
+    "for col in excess_ret_expectation.columns:\n",
+    "    month_frac[col] = (\n",
+    "        len(excess_ret_expectation[excess_ret_expectation[col] > 0])/len(excess_ret_expectation)) * 100\n",
+    "\n",
+    "month_frac\n"
+   ]
   }
  ],
  "metadata": {
