--- a/homework/hw7.ipynb
+++ b/homework/hw7.ipynb
@@ -1585,7 +1585,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6212044297838806 0.6100545188176036\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Real</th>\n",
+       "      <th>Forecast</th>\n",
+       "      <th>Zero predict</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1998-02-28</th>\n",
+       "      <td>0.0693</td>\n",
+       "      <td>0.0166</td>\n",
+       "      <td>0.0158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998-03-31</th>\n",
+       "      <td>0.0488</td>\n",
+       "      <td>0.0206</td>\n",
+       "      <td>0.0167</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998-04-30</th>\n",
+       "      <td>0.0128</td>\n",
+       "      <td>0.0231</td>\n",
+       "      <td>0.0172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998-05-31</th>\n",
+       "      <td>-0.0208</td>\n",
+       "      <td>0.0215</td>\n",
+       "      <td>0.0171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1998-06-30</th>\n",
+       "      <td>0.0426</td>\n",
+       "      <td>0.0168</td>\n",
+       "      <td>0.0165</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-06-30</th>\n",
+       "      <td>-0.0825</td>\n",
+       "      <td>0.0070</td>\n",
+       "      <td>0.0088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-07-31</th>\n",
+       "      <td>0.0921</td>\n",
+       "      <td>0.0082</td>\n",
+       "      <td>0.0086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-08-31</th>\n",
+       "      <td>-0.0408</td>\n",
+       "      <td>0.0079</td>\n",
+       "      <td>0.0088</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-09-30</th>\n",
+       "      <td>-0.0924</td>\n",
+       "      <td>0.0072</td>\n",
+       "      <td>0.0087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-10-31</th>\n",
+       "      <td>0.0813</td>\n",
+       "      <td>0.0091</td>\n",
+       "      <td>0.0084</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>297 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Real  Forecast  Zero predict\n",
+       "1998-02-28  0.0693    0.0166        0.0158\n",
+       "1998-03-31  0.0488    0.0206        0.0167\n",
+       "1998-04-30  0.0128    0.0231        0.0172\n",
+       "1998-05-31 -0.0208    0.0215        0.0171\n",
+       "1998-06-30  0.0426    0.0168        0.0165\n",
+       "...            ...       ...           ...\n",
+       "2022-06-30 -0.0825    0.0070        0.0088\n",
+       "2022-07-31  0.0921    0.0082        0.0086\n",
+       "2022-08-31 -0.0408    0.0079        0.0088\n",
+       "2022-09-30 -0.0924    0.0072        0.0087\n",
+       "2022-10-31  0.0813    0.0091        0.0084\n",
+       "\n",
+       "[297 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def oos_reg(y, X, start, add_constant=True):\n",
+    "    # need to use python 3.8\n",
+    "    if add_constant:\n",
+    "        X = sm.add_constant(X)\n",
+    "    model = RollingOLS(y, X, window=X.shape[0], min_nobs=start-1, expanding=True).fit()\n",
+    "    params = model.params.shift().iloc[start:]\n",
+    "    \n",
+    "    rolling_pre = (model.params.shift() * X).sum(axis=1)\n",
+    "    zero_pre = y.expanding(start).mean().shift()\n",
+    "\n",
+    "    predict_all = pd.concat([y, rolling_pre, zero_pre], axis=1).iloc[start:]\n",
+    "    predict_all.columns = [\"Real\", \"Forecast\", \"Zero predict\"]\n",
+    "    predict_err = np.square(predict_all[\"Real\"] - predict_all[\"Forecast\"]).sum()\n",
+    "    zero_pre_err = np.square(\n",
+    "        predict_all[\"Real\"] - predict_all[\"Zero predict\"]).sum()\n",
+    "    print(predict_err, zero_pre_err)\n",
+    "    r_squared = 1 - predict_err/zero_pre_err\n",
+    "    return params, predict_all, r_squared\n",
+    "\n",
+    "\n",
+    "params, predict_all, r_squared = oos_reg(\n",
+    "    factor[[\"SPY\"]], factor[[\"DP\", \"EP\"]], 60, add_constant=True)\n",
+    "predict_all"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1658,7 +1816,7 @@
        "2022-10-31 -0.0183  0.0081  0.0024"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1674,7 +1832,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1993-02-28       NaN\n",
+       "1993-03-31       NaN\n",
+       "1993-04-30       NaN\n",
+       "1993-05-31       NaN\n",
+       "1993-06-30       NaN\n",
+       "               ...  \n",
+       "2022-06-30    0.0070\n",
+       "2022-07-31    0.0082\n",
+       "2022-08-31    0.0079\n",
+       "2022-09-30    0.0072\n",
+       "2022-10-31    0.0091\n",
+       "Length: 357, dtype: float64"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_spy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1872,7 @@
        "0.6212044297838806"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1697,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1707,7 +1896,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1738,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1765,7 +1954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1881,7 +2070,7 @@
        "oos_portfolio: EP         0.2490       -0.5837  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1905,7 +2094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +2160,7 @@
        "3-Factor                -0.0642"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1984,7 +2173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2064,7 +2253,7 @@
        "3-Factor              0.1063      0.1501        0.7079"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2075,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2087,7 +2276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2153,7 +2342,7 @@
        "oos_portfolio: EP                38.5135"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
