--- a/homework/hw8.ipynb
+++ b/homework/hw8.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
        "1994-06-01                    -0.029                      1.02  "
       ]
      },
-     "execution_count": 103,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "1993-06-30  0.0037"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
        "1993-06-30  0.0026"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
        "1994-07-31                      0.1123                    0.0803  0.0287"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
        "SPY                         0.1738      0.1123        1.5479"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_e5cee_\">\n",
+       "<table id=\"T_6895d_\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
@@ -600,34 +600,34 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_e5cee_level0_row0\" class=\"row_heading level0 row0\" >Gross Monthly Performancea</th>\n",
-       "      <td id=\"T_e5cee_row0_col0\" class=\"data row0 col0\" >-0.2877</td>\n",
-       "      <td id=\"T_e5cee_row0_col1\" class=\"data row0 col1\" >1.5866</td>\n",
-       "      <td id=\"T_e5cee_row0_col2\" class=\"data row0 col2\" >-3.04%</td>\n",
-       "      <td id=\"T_e5cee_row0_col3\" class=\"data row0 col3\" >-7.30%</td>\n",
+       "      <th id=\"T_6895d_level0_row0\" class=\"row_heading level0 row0\" >Gross Monthly Performancea</th>\n",
+       "      <td id=\"T_6895d_row0_col0\" class=\"data row0 col0\" >-0.2877</td>\n",
+       "      <td id=\"T_6895d_row0_col1\" class=\"data row0 col1\" >1.5866</td>\n",
+       "      <td id=\"T_6895d_row0_col2\" class=\"data row0 col2\" >-3.04%</td>\n",
+       "      <td id=\"T_6895d_row0_col3\" class=\"data row0 col3\" >-7.30%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e5cee_level0_row1\" class=\"row_heading level0 row1\" >Net Monthly Performanceb</th>\n",
-       "      <td id=\"T_e5cee_row1_col0\" class=\"data row1 col0\" >-0.8102</td>\n",
-       "      <td id=\"T_e5cee_row1_col1\" class=\"data row1 col1\" >2.9269</td>\n",
-       "      <td id=\"T_e5cee_row1_col2\" class=\"data row1 col2\" >-2.64%</td>\n",
-       "      <td id=\"T_e5cee_row1_col3\" class=\"data row1 col3\" >-6.87%</td>\n",
+       "      <th id=\"T_6895d_level0_row1\" class=\"row_heading level0 row1\" >Net Monthly Performanceb</th>\n",
+       "      <td id=\"T_6895d_row1_col0\" class=\"data row1 col0\" >-0.8102</td>\n",
+       "      <td id=\"T_6895d_row1_col1\" class=\"data row1 col1\" >2.9269</td>\n",
+       "      <td id=\"T_6895d_row1_col2\" class=\"data row1 col2\" >-2.64%</td>\n",
+       "      <td id=\"T_6895d_row1_col3\" class=\"data row1 col3\" >-6.87%</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_e5cee_level0_row2\" class=\"row_heading level0 row2\" >SPY</th>\n",
-       "      <td id=\"T_e5cee_row2_col0\" class=\"data row2 col0\" >-0.4335</td>\n",
-       "      <td id=\"T_e5cee_row2_col1\" class=\"data row2 col1\" >-0.3620</td>\n",
-       "      <td id=\"T_e5cee_row2_col2\" class=\"data row2 col2\" >-4.64%</td>\n",
-       "      <td id=\"T_e5cee_row2_col3\" class=\"data row2 col3\" >-5.14%</td>\n",
+       "      <th id=\"T_6895d_level0_row2\" class=\"row_heading level0 row2\" >SPY</th>\n",
+       "      <td id=\"T_6895d_row2_col0\" class=\"data row2 col0\" >-0.4335</td>\n",
+       "      <td id=\"T_6895d_row2_col1\" class=\"data row2 col1\" >-0.3620</td>\n",
+       "      <td id=\"T_6895d_row2_col2\" class=\"data row2 col2\" >-4.64%</td>\n",
+       "      <td id=\"T_6895d_row2_col3\" class=\"data row2 col3\" >-5.14%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fb011111310>"
+       "<pandas.io.formats.style.Styler at 0x7ff89c97d310>"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +709,7 @@
        "Net Monthly Performanceb  0.1315  0.1371      0.019"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -803,7 +803,7 @@
        "Net Monthly Performanceb  0.155  0.1669 -1.9267     0.0243"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
        "1994-07-31  8.2184e-04  0.0  0.0000  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1008,7 @@
        "Net Monthly Performanceb  0.1012  0.4666 -0.7821  1.2896     0.0555"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1054,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
        "1999-05-31  0.0041  0.0044  0.0021  0.0008  7.5000e-05"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1162,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1249,7 +1249,7 @@
        "1999-05-31  1.6020  1.0422  0.6545  0.0083"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1394,7 +1394,7 @@
        "1999-05-31  0.0003 -0.0114 -0.0007 -0.0120"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,7 +1407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
        "1999-05-31 -0.0037 -0.0155 -0.0048 -0.0160"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1583,7 @@
        "USJP -0.0174      0.0915       -0.1903"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1651,7 +1651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1714,7 @@
        "R-squared  0.0004  0.0026  0.0039  0.0005"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1752,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1890,7 +1890,7 @@
        "[273 rows x 4 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,7 +1903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1950,7 +1950,7 @@
        "% of Months  23.8095  50.1832  63.0037   0.0"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
